awful change to remove email/pass form
would be shocked if I didn't roll this back in the future

--- a/testsite/app/config/credentials.yml
+++ b/testsite/app/config/credentials.yml
@@ -8,7 +8,7 @@ DEVELOPMENT:
     consumer_key: '133152743541814'
     consumer_secret: '7cef894a32184889f2c37129b707edb6'
     request_token_params:
-      scope: 'email,publish_stream'
+      scope: 'email,'
 
   SOCIAL_GITHUB:
     consumer_key: '05f3bf6d26ec30ed42aa'
