--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ testsite/app/config/*.yml
 !testsite/app/config/app.yml
 app/data/GeoLiteCity.dat
 testsite/app/config/credentials.yml
+*.cache
+*.json
+*.log
